--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,32 @@
 @tailwind utilities;
 
 
+body{
+    background-color: #111827;
+}
 
 
-
+/* For WebKit browsers (Chrome, Safari) */
+::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(46, 74, 213); 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(46, 74, 213); 
+  }
+  html {
+    scroll-behavior: smooth;
+  }
